# sdks

./: .gitignore  .prettierignore  .release-please-manifest.json  CHANGELOG.md  README.md  package-lock.json  package.json  pnpm-lock.yaml  release-please-config.json  rollup.config.mjs  schema.graphql  tsconfig.json
.github/workflows/: ci.yml  release.yml
examples/: addAppDomain.js  deleteApp.js  deleteAppDomain.js  deployFromFiles.js  deployFromZip.js  deployFromZipUrl.js  deployPerishable.js  deployWordpress.js  generateAppSshToken.js  getAppById.js  getAppByName.js  getAppLogs.js  getAppSshServer.js  listApps.js  manageAppSshAuthorizedKeys.js  manageAppSshUsers.js  redeployFromFiles.js  retrieveDeployment.js  sshIntoApp.js  tiinyBlocked.js  updateAppSshServer.js
js/: CHANGELOG.md  README.md  bundle.js  package-lock.json  package.json  rollup.config.mjs  schema.graphql
js/examples/: README.md  deleteApp.js  deleteAppDomain.js  deployFromZip.js  exportAppsCsv.js  getAppByName.js  getAppSshServer.js  importHostedDnsZoneFile.js  manageAppDatabases.js  manageAppGitConnection.js  manageAppVolumes.js  manageEmails.js  manageHostedDnsDomains.js  manageHostedDnsRecords.js  package.json  pnpm-lock.yaml  retrieveDeployment.js
js/src/: environment.ts  index.ts  pagination.ts  upload.ts
js/test/: sdk-unit.test.js
python/: CHANGELOG.md  README.md  pyproject.toml
python/examples/: README.md  async_usage.py  basic_usage.py  deploy_app.py  import_hosted_dns_zone_file.py  list_apps.py  manage_app_databases.py  manage_app_git_connection.py  manage_app_volumes.py  manage_emails.py  manage_hosted_dns_domains.py  manage_hosted_dns_records.py
python/src/stackmachine/: __init__.py  _async_client.py  _client.py  _config.py  _errors.py  _models.py  _pagination.py  _transport.py  _types.py  _uploads.py  _utils.py
python/src/stackmachine/_graphql/: __init__.py  operations.py
python/src/stackmachine/resources/: __init__.py  _shared.py  apps.py  cache.py  cronjobs.py  databases.py  deployments.py  dns.py  domains.py  emails.py  files.py  git.py  packages.py  ssh.py  usage.py  versions.py  volumes.py
python/tests/: test_package.py
src/: environment.ts  errors.ts  index.ts  upload.ts
src/__generated__/: srcAddSshAuthorizedKeyMutation.graphql.ts  srcAppAlias.graphql.ts  srcAutobuildMutation.graphql.ts  srcAutobuildSubscription.graphql.ts  srcDeployAppData.graphql.ts  (+25 more)
test/: sdk-unit.test.js  sdk.test.js  ssh.test.js
(+64 files in other folders)
