[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[project]
name = "stackmachine"
version = "0.2.1"
description = "Python SDK for StackMachine."
readme = "README.md"
requires-python = ">=3.9"
dependencies = []
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/stackmachine/sdks/tree/main/python"
Repository = "https://github.com/stackmachine/sdks"
Issues = "https://github.com/stackmachine/sdks/issues"

[dependency-groups]
dev = [
  "pytest>=8.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/stackmachine"]

[tool.hatch.build.targets.sdist]
include = [
  "/README.md",
  "/pyproject.toml",
  "/src",
  "/tests",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
