[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[project]
name = "stackmachine"
version = "0.3.1"
description = "Python SDK for StackMachine."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "httpx>=0.27,<1",
  "websocket-client>=1.8,<2",
  "websockets>=12,<16",
]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/stackmachine/sdks/tree/main/python"
Repository = "https://github.com/stackmachine/sdks"
Issues = "https://github.com/stackmachine/sdks/issues"

[dependency-groups]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.24",
  "ruff>=0.8",
]

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.hatch.build.targets.wheel]
packages = ["src/stackmachine"]

[tool.hatch.build.targets.sdist]
include = [
  "/README.md",
  "/examples",
  "/pyproject.toml",
  "/src",
  "/tests",
]
